--- a/age-calculator-app-main/styles.css
+++ b/age-calculator-app-main/styles.css
@@ -112,7 +112,10 @@ input:focus{
     padding-top: 20px;
     width: 100%;
     height: 65%;
+    /* text-align: left; */
+    padding-left: 0;
     border-radius: 0 0 100px 30px;
+    
 }
 .line{
 font-size: 64px;
