--- a/base-apparel-coming-soon-master/styles.css
+++ b/base-apparel-coming-soon-master/styles.css
@@ -1,62 +1,104 @@
+:root {
+  --desatRed: hsl(0, 36%, 70%);
+  --softRed: hsl(0, 93%, 68%);
+  --darkGreyRed: hsl(0, 6%, 24%);
+  --grad1: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+  --grad2: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+}
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
 }
 html{
   height: 100%;
-  width: 100%;
 }
 body{
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 100%;
-  width: 100%;
 }
 .container{
   display: flex;
-  /* background-color: red; */
-  width: 80%;
-  max-width: 1000px;
-  /* min-width: 870px; */
-  height: 70%;
-  min-height: fit-content;
-}
-.main{
-  border: 5px solid greenyellow;
-  width: 60%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-#inside-main-centered{
-  width: 60%;
-  /* background-color: green; */
-  height: 100%;
-}
-#logo{
-  padding: 20px 0px;
-}
-#bigPara{
-  font-size: 50px;
-  letter-spacing: 7px;
-  /* margin-top: 20%; */
-}
-#smallPara{
-  font-size: 16px;
-  /* margin-top: 10%; */
-}
-#input-email{
-  padding: 18px;
+  flex-direction: row;
   width: 90%;
-  /* margin-top: 10%; */
-  border-radius: 40px;
+  height: 80%;
+  min-width: fit-content;
+  min-height: 585px;
+  box-shadow: 2px 2px rgb(225, 218, 218);
+  border-radius: 2px;
+}
+.leftSide{
+  width: 60%;
+  background: url(images/bg-pattern-desktop.svg);
+  background-position: center;
+  background-size: cover;
+}
+.logo{
+  padding: 30px;
+}
+.textArea{
+  text-align: center;
+}
+.biggerText{
+  font-size: 4.5rem;
+  letter-spacing: 1.1rem;
+  padding: 4rem 0 2rem 0;
+}
+.biggerText #weare{
+  font-weight: 300;
+  color: var(--desatRed);
+}
+.biggerText #comingsoon{
+  font-weight: 600;
+}
+.smallerText{
+  color: var(--desatRed);
+  font-size: 1rem;
+  padding-bottom: 2rem;
+}
+.emailInput{
+  width: 422px;
+  margin: auto;
+  position: relative;
+  #email{
+    padding: 1rem;
+    width: 422px;
+    border: 2px solid var(--desatRed);
+    border-radius: 30px;
+  }
+  #email::placeholder{
+    color: var(--desatRed);
+  }
+}
+.emailInput #arrow{
+transition: all 1s;
+position: absolute;
+bottom: 0;
+right: 0;
+background: var(--grad2);
+width: 68px;
+height: 48px;
+border-radius: 30px;
+padding: 15px 25px;
+}
+.emailInput #hidden{
+  position: absolute;
+  top:10px;
+  right: 80px;
+  display: none;
+}
+.emailInput #arrow:hover{
+  cursor: pointer;
+  transform: scale(1.4);
 }
 .sideImg{
-  border: 5px solid blue;
   width: 40%;
   background: url(images/hero-desktop.jpg);
   background-size: cover;
+  /* object-fit: fill; */
+  background-position: top;
   background-repeat: no-repeat;
-  background-position: center;
 }
