no more default tap highlight

--- a/interactive-rating-component-main/styles.css
+++ b/interactive-rating-component-main/styles.css
@@ -6,13 +6,11 @@
   --vDarkBlue: hsl(216, 12%, 8%);
   --orange: hsl(25, 97%, 53%);
 }
-::selection{
-    background-color: transparent;
-}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 html,
 body {
