addition of animation

--- a/interactive-rating-component-main/styles.css
+++ b/interactive-rating-component-main/styles.css
@@ -106,7 +106,22 @@ body {
     text-decoration: underline;
 }
 /* additional for thanks page */
+@keyframes animate-pop {
+    0% {
+      opacity: 0;
+      transform: scale(0.5, 0.5);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: scale(1, 1);
+    }
+  }
+  
 .containerthnx {
+    animation-name:animate-pop;
+    animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
+    animation-duration: 0.5s;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
