--- a/interactive-rating-component-main/styles.css
+++ b/interactive-rating-component-main/styles.css
@@ -37,7 +37,7 @@ body {
   width: 450px;
   /* height: 20vw; */
   height: 450px;
-  min-width: 375px;
+  /* min-width: 375px; */
   padding: 40px;
   border-radius: 50px;
   background-color: var(--darkBlue);
