--- a/easybank-landing-page-master/styles.css
+++ b/easybank-landing-page-master/styles.css
@@ -1,10 +1,128 @@
-@media screen and (max-width:1024px){
-    /* body{
+@media screen and (max-width: 1024px) {
+  /* body{
         background-color: red;
     } */
-    
+}
+@media screen and (min-width: 1070px) {
+  /* .cont1 {
+    display: flex;
+    flex-direction: row-reverse;
+  } */
+  /* .cont1 .sideimg{
+    float: right;
+  } */
+  .mobmenu{
+    display: none;
+  }
+  * {
+    text-align: left;
+  }
+  .navbar {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  .navbar button {
+    display: block !important;
+  }
+  .navbar ul {
+    display: flex !important;
+  }
+  .navbar li {
+    display: inline-block !important;
+    padding-top: 1.38rem !important;
+    padding-bottom: 1.38rem !important;
+    position: relative !important;
+    text-align: left !important;
+    margin-left: 0.4rem;
+  }
+  .navbar li:hover {
+    cursor: pointer;
+    color: black;
+    .borbot{
+      padding: 0.1rem;
+      background:linear-gradient(to left, var(--brcyan), var(--lmgreen)) ;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+    }
+  }
+  .navbar .hamburger {
+    display: none;
+  }
+  .cont1 {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .cont1 .sideimg {
+    background: url(images/bg-intro-desktop.svg) !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center !important;
+  }
+  .cont1 .text {
+    width: 40% !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .cont1 .text h1 {
+    font-size: 4rem !important;
+    line-height: 5rem !important;
+    text-align: center;
+  }
+  .cont1 .text p {
+    font-size: 1.2rem !important;
+  }
+  .cont2 {
+    padding: 0 3rem;
+    margin-top: -6rem !important;
+  }
+  .cont2 .heading {
+    width: 50%;
+  }
+  .cont2 .contcard {
+    flex-direction: row !important;
+  }
+  .cont2 .card {
+    padding: 1rem;
+  }
+  .articlecont {
+    padding-right: 4rem !important;
+    padding-left: 4rem !important;
+  }
+  .articlecont > h2 {
+    text-align: left !important;
+  }
+  .articlecont .contcard {
+    flex-direction: row !important;
+    justify-content: space-around;
+  }
+  .articlecont .card {
+    margin-left: 1.5rem;
+    padding: 0.4rem !important;
+  }
+  footer {
+    flex-direction: row !important;
+    justify-content: space-evenly !important;
+  }
+  footer ul {
+    display: flex;
+  }
+  footer li {
+    text-align: left !important;
+  }
+  footer .another {
+    margin-left: 2rem;
+  }
+  footer .btncop{
+    margin-top: 3rem;
+    align-items: flex-end !important;
+  }
 }
 :root {
+  --lingrad: linear-gradient(to left, var(--brcyan), var(--lmgreen));
   --darkblue: hsl(233, 26%, 24%);
   --lmgreen: #31d35c;
   --brcyan: hsl(192, 70%, 51%);
@@ -29,12 +147,13 @@
 .centertext {
   text-align: center;
 }
-button:hover{
-    cursor: pointer;
+button:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
 .navbar {
-  /* position: sticky;
-    top: 0; */
+  position: sticky;
+  top: 0;
   background-color: white;
   display: flex;
   flex-direction: row;
@@ -42,10 +161,51 @@ button:hover{
   padding: 1.38rem 1.49rem;
   align-items: center;
   z-index: 1;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .navbar .logo {
   display: flex;
   align-items: center;
+}
+.navbar button {
+  display: none;
+  padding: 0.8rem 2rem;
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 700;
+  border-radius: 3rem;
+  border: none;
+  background: linear-gradient(to left, var(--brcyan), var(--lmgreen));
+}
+.navbar ul {
+  display: none;
+  list-style-type: none;
+  display: flex;
+  color: var(--greyblue);
+}
+.navbar li {
+    cursor: pointer;
+  display: none;
+  padding: 1rem;
+}
+.mobmenu{
+    display: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: absolute;
+    border-radius: 10px;
+    margin-top: 1rem;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 12;
+    list-style: none;
+    color: var(--darkblue);
+    background-color: white ;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+.mobmenu li{
+    padding: 1rem 5rem;
 }
 .cont1 .sideimg {
   position: relative;
@@ -54,6 +214,7 @@ button:hover{
   background-position: center;
   padding: 0 1rem;
   overflow: hidden;
+  text-align: center;
 }
 .cont1 .sideimg img {
   max-width: 100%;
@@ -166,8 +327,8 @@ button:hover{
   font-size: 0.9rem;
   color: var(--greyblue);
 }
-.articlecont .contcard .card h4:hover{
-    color: var(--lmgreen);
+.articlecont .contcard .card h4:hover {
+  color: var(--lmgreen);
 }
 footer {
   background-color: var(--darkblue);
@@ -208,23 +369,23 @@ footer button {
   border: none;
   background: linear-gradient(to left, var(--brcyan), var(--lmgreen));
 }
-footer .logos img:hover{
-    cursor: pointer;
-    fill:#31d35c;
+footer .logos svg:hover {
+  cursor: pointer;
 }
 footer > p {
   color: var(--greyblue);
   font-size: 0.9rem;
   margin-bottom: 2rem;
 }
-footer ul li:hover{
-    color: var(--lmgreen);
-    cursor: pointer;
+footer ul li:hover {
+  color: var(--lmgreen);
+  cursor: pointer;
 }
-footer .btncop{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 3rem;
+footer .btncop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 5rem;
+  color: white;
 }
