--- a/easybank-landing-page-master/styles.css
+++ b/easybank-landing-page-master/styles.css
@@ -191,7 +191,7 @@ button:hover {
 .mobmenu{
     display: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: absolute;
+    position: fixed;
     border-radius: 10px;
     margin-top: 1rem;
     left: 50%;
