--- a/loopstudios-landing-page-main/styles.css
+++ b/loopstudios-landing-page-main/styles.css
@@ -13,16 +13,43 @@ html {
   background-color: var(--black);
 }
 * {
+  text-underline-offset: 1rem;
+  -webkit-tap-highlight-color: transparent;
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-li,button{
-    cursor: pointer;
+ul {
+  list-style-type: none;
 }
-li:hover{
-    text-decoration: underline;
+li,
+button {
+  cursor: pointer;
+}
+li:hover {
+  text-decoration: underline;
+}
+.deskmenu,
+.deskmenu li {
+  display: none;
+}
+.mobmenu{
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    font-family: var(--josefin);
+    font-weight: 400;
+    font-size: 2rem;
+    padding: 2rem;
+    margin-top: 2rem;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+}
+.mobmenu li:hover{
+    text-decoration: none;
 }
 .cont1 {
   padding: 2.2rem 1.3rem;
@@ -43,6 +70,7 @@ li:hover{
   max-width: 150px;
 }
 .cont1 h1 {
+  max-width: 400px;
   word-wrap: break-word;
   margin: 10.5rem 0;
   border: 2px solid white;
@@ -58,6 +86,7 @@ li:hover{
   background-color: var(--white);
   padding-inline: 1.5rem;
   padding-block: 6rem 2rem;
+  position: relative;
 }
 .cont2Img {
   width: fit-content;
@@ -65,6 +94,7 @@ li:hover{
 }
 .cont2Img > img {
   max-width: 100%;
+  opacity: 1;
 }
 .cont2Text {
   padding: 1.5rem 1rem;
@@ -114,8 +144,9 @@ li:hover{
   font-family: var(--josefin);
   text-transform: uppercase;
 }
-.cont3 .cardcont .card:hover{
-    color: black;
+.cont3 .cardcont .card:hover {
+  color: black;
+  cursor: pointer;
 }
 .cont3 .cardcont .card h4 {
   font-size: 1.4rem;
@@ -136,33 +167,42 @@ li:hover{
   font-weight: 400;
   letter-spacing: 5px;
 }
-footer{
-    padding-block: 3rem;
-    font-family: var(--alata);
-    font-weight: 400;
-    color: white;
+.cont3 .hidden {
+  display: none;
 }
-.ftrLogo{
-    margin: auto;
-    width: fit-content;
+footer {
+  padding-block: 3rem;
+  font-family: var(--alata);
+  font-weight: 400;
+  color: white;
 }
-footer ul{
-    text-align: center;
-    margin-block: 2rem;
+.ftrLogo {
+  margin: auto;
+  width: fit-content;
 }
-footer li{
-    padding: 0.7rem;
-    font-size: 0.9rem;
+footer ul {
+  text-align: center;
+  margin-block: 2rem;
 }
-footer .socicons{
-    text-align: center;
+footer li {
+  padding: 0.7rem;
+  font-size: 0.9rem;
 }
-footer .socicons img{
-    padding-inline: 0.4rem;
+footer .socicons {
+  text-align: center;
 }
-footer>p{
-    color: var(--vdgray);
-    margin: auto;
-    width: fit-content;
-    margin-top: 1rem;
+footer .socicons img {
+  padding-inline: 0.4rem;
+}
+footer .socicons img:hover {
+  cursor: pointer;
+}
+footer p {
+  color: var(--vdgray);
+  margin: auto;
+  width: fit-content;
+}
+button:hover {
+  background-color: black;
+  color: white;
 }
