--- a/ecommerce-product-page-main/styles.css
+++ b/ecommerce-product-page-main/styles.css
@@ -61,6 +61,7 @@ nav {
   position: relative;
 }
 .cartInfo{
+  box-shadow: 10px 0 30px black;
   display: none;
   position: absolute;
   z-index: 2;
@@ -82,7 +83,7 @@ nav {
   padding: 0px 8px;
   border-radius:50%;
   position: absolute;
-  top: -0.9rem;
+  top: -0.5rem;
   margin-left: 0.8rem;
 }
 .cartInfo h4{
@@ -139,7 +140,7 @@ nav {
   margin-right: 1rem;
 }
 #pfp {
-  width: 22px;
+  width: 32px;
   margin-left: 1.5rem;
 }
 #list {
@@ -164,8 +165,22 @@ nav {
 }
 #shoes {
   max-width: 100%;
+  border-radius: 30px;
   /* transition: all 1s;
   transition-timing-function: ease-in-out; */
+}
+.thumbnails{
+  margin-top: 1rem;
+  display: none;
+}
+.thumbnails>img{
+  cursor: pointer;
+  width: 100px;
+  border-radius: 15px;
+}
+.thumbnails>img:hover{
+  opacity: 0.6;
+  border: 5px solid var(--orange);
 }
 #next,
 #previous {
@@ -240,9 +255,11 @@ main h1 {
   border-radius: 10px;
   text-align: center;
   position: relative;
-  max-width: 600px;
+  width: 100%;
+  max-width: 400px;
   margin: auto;
   margin-top: 2rem;
+  display: block;
 }
 .amountButton span{
   font-weight: 700;
