--- a/easybank-landing-page-master/styles.css
+++ b/easybank-landing-page-master/styles.css
@@ -53,6 +53,7 @@
   .cont1 {
     display: flex;
     flex-direction: row-reverse;
+    margin-bottom: 3rem;
   }
   .cont1 .sideimg {
     background: url(images/bg-intro-desktop.svg) !important;
